--- a/services/callback/src/main/resources/application.yaml
+++ b/services/callback/src/main/resources/application.yaml
@@ -10,6 +10,8 @@ logging:
 services:
 
 spring:
+  application:
+    name: cwa-server-callback
   lifecycle:
     # keep in sync or lower than the kubernetes setting 'terminationGracePeriodSeconds'
     # 5s +5s Feign client + 20s DB timeout
