--- a/services/download/src/main/resources/application.yaml
+++ b/services/download/src/main/resources/application.yaml
@@ -31,6 +31,8 @@ federation-gateway:
     certificate-sha: ${FEDERATION_CERTIFICATE_SHA}
 
 spring:
+  application:
+    name: cwa-server-download
   main:
     web-application-type: NONE
   # Postgres configuration
