--- a/services/pom.xml
+++ b/services/pom.xml
@@ -27,6 +27,14 @@
       <artifactId>spring-cloud-starter-vault-config</artifactId>
     </dependency>
     <dependency>
+      <groupId>org.springframework.cloud</groupId>
+      <artifactId>spring-cloud-starter-aws</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework.cloud</groupId>
+      <artifactId>spring-cloud-starter-aws-parameter-store-config</artifactId>
+    </dependency>
+    <dependency>
       <groupId>org.opencwa</groupId>
       <artifactId>persistence</artifactId>
     </dependency>
