--- a/services/upload/src/test/resources/bootstrap.yaml
+++ b/services/upload/src/test/resources/bootstrap.yaml
@@ -3,3 +3,12 @@ spring:
   cloud:
     vault:
       enabled: false
+cloud:
+  aws:
+    stack:
+      auto: false
+    region:
+      static: eu-central-1
+aws:
+  paramstore:
+    enabled: false
