--- a/.github/workflows/ci-develop.yml
+++ b/.github/workflows/ci-develop.yml
@@ -27,7 +27,7 @@ jobs:
           restore-keys: ${{ env.cache-name }}-
       - name: Lint Dockerfile
         run: |
-          docker pull hadolint/hadolint
+          docker pull hadolint/hadolint:v1.22.1
           docker run --rm --interactive hadolint/hadolint < ./services/submission/Dockerfile
       - name: docker build
         run: |
@@ -327,7 +327,7 @@ jobs:
           restore-keys: ${{ env.cache-name }}-
       - name: Lint Dockerfile
         run: |
-          docker pull hadolint/hadolint
+          docker pull hadolint/hadolint:v1.22.1
           docker run --rm --interactive hadolint/hadolint < ./services/distribution/Dockerfile
       - name: docker build
         run: |
@@ -482,7 +482,7 @@ jobs:
           restore-keys: ${{ env.cache-name }}-
       - name: Lint Dockerfile
         run: |
-          docker pull hadolint/hadolint
+          docker pull hadolint/hadolint:v1.22.1
           docker run --rm --interactive hadolint/hadolint < ./services/download/Dockerfile
       - name: docker build
         run: |
@@ -637,7 +637,7 @@ jobs:
           restore-keys: ${{ env.cache-name }}-
       - name: Lint Dockerfile
         run: |
-          docker pull hadolint/hadolint
+          docker pull hadolint/hadolint:v1.22.1
           docker run --rm --interactive hadolint/hadolint < ./services/upload/Dockerfile
       - name: docker build
         run: |
