--- a/.github/workflows/ci-develop.yml
+++ b/.github/workflows/ci-develop.yml
@@ -28,7 +28,7 @@ jobs:
       - name: Lint Dockerfile
         run: |
           docker pull hadolint/hadolint:v1.22.1
-          docker run --rm --interactive hadolint/hadolint < ./services/submission/Dockerfile
+          docker run --rm --interactive hadolint/hadolint:v1.22.1 < ./services/submission/Dockerfile
       - name: docker build
         run: |
           docker build --pull --rm \
@@ -328,7 +328,7 @@ jobs:
       - name: Lint Dockerfile
         run: |
           docker pull hadolint/hadolint:v1.22.1
-          docker run --rm --interactive hadolint/hadolint < ./services/distribution/Dockerfile
+          docker run --rm --interactive hadolint/hadolint:v1.22.1 < ./services/distribution/Dockerfile
       - name: docker build
         run: |
           docker build --pull --rm \
@@ -483,7 +483,7 @@ jobs:
       - name: Lint Dockerfile
         run: |
           docker pull hadolint/hadolint:v1.22.1
-          docker run --rm --interactive hadolint/hadolint < ./services/download/Dockerfile
+          docker run --rm --interactive hadolint/hadolint:v1.22.1 < ./services/download/Dockerfile
       - name: docker build
         run: |
           docker build --pull --rm \
@@ -638,7 +638,7 @@ jobs:
       - name: Lint Dockerfile
         run: |
           docker pull hadolint/hadolint:v1.22.1
-          docker run --rm --interactive hadolint/hadolint < ./services/upload/Dockerfile
+          docker run --rm --interactive hadolint/hadolint:v1.22.1 < ./services/upload/Dockerfile
       - name: docker build
         run: |
           docker build --pull --rm \
