--- a/services/submission/src/main/resources/application.yaml
+++ b/services/submission/src/main/resources/application.yaml
@@ -42,6 +42,11 @@ services:
       ac:
         days: 10 # days
         rate: 3600000 # every hour
+      covicode:
+        days: 10 # days
+        rate: 3600000 # every hour
+    covicode:
+      rate: 3600000 # every hour
     monitoring:
       # The batch size (number of requests) to use for monitoring request count.
       batch-size: 1
