--- a/services/submission/src/main/resources/application-dev.yml
+++ b/services/submission/src/main/resources/application-dev.yml
@@ -14,6 +14,8 @@ services:
       ac:
         days: 10 # days
         rate: 60000  # Every minute
+    covicode:
+      key: +VhBgVyOB96AX1NHqEyibA==
     tek:
       dummy:
         rate: 60000
